Fixed image visibility

--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ body{
 }
 
 .task-img {
-  background-image: url("/images/annoncument\ website.png");
+  background-image: url("/images/annoncumentWebsite.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
